--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     //db
     runtimeOnly 'com.mysql:mysql-connector-j'
+    //mybatis
+    //mybatis 사용
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3' //3.0.2 => 3.0.3으로 상승!!
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' //swagger 사용을 위함.
     // 추가 종료
 
     compileOnly 'org.projectlombok:lombok'
