--- a/src/main/front/package.json
+++ b/src/main/front/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "@react-oauth/google": "^0.12.1",
+    "file-type": "^19.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-infinite-scroller": "^1.2.6",
