--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ sourceSets {
     }
 }
 
-processResources { dependsOn "copyReactBuildFiles" }
+//processResources { dependsOn "copyReactBuildFiles" }
 
 task installReact(type: Exec) {
     workingDir "$frontendDir"
